@@ -1,3 +1,6 @@
+2015-12-10 Stanislas Rolland  <typo3(arobas)sjbr.ca>
+	* Fix for token validation
+
 2015-12-09 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Fix for password edition after invitation acceptation
 	* Add template for invalid token
